--- a/BookManagementBackend/appsettings.json
+++ b/BookManagementBackend/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LibraryContext": "server=127.0.0.1;uid=SYSDBA;pwd=masterkey;database=Library"
+    "LibraryContext": ""
+
   },
   "Settings": {
     "JWTSecret": "2FgvW9i1fKc0078GIjtyX4iYwyGOjCor",
