--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-      "LibraryContext": "server=mysql-256627e-pj2-library.l.aivencloud.com;port=15240;uid=avnadmin;pwd=AVNS_SROCfn7nFkbNqZoUiBo;database=defaultdb;sslca=C:\\Users\\rafae\\Downloads\\ca (1).pem;sslmode=Required"
+      "LibraryContext": "server=mysql-256627e-pj2-library.l.aivencloud.com"
 
   },
   "Settings": {
