--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "avnadmin",
         "AVNS",
         "defaultdb",
-        "Ijty"
+        "DEVOLUWEB",
+        "Ijty",
+        "Infraestructure"
     ]
 }
